--- a/gb/17/4/7/n9012645.md
+++ b/gb/17/4/7/n9012645.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hp202/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hp202/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hp202/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hp202/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hp202/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hp202/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hp202/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hp202/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/hp202/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hp202/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hp202/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hp202/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hp202/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵奥克兰首场满场 华人赞展现人性的闪光点</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/04/170407102110100101-600x400.jpg" />
 <h6>2017年4月7日晚，神韵纽约艺术团在奥克兰ASB剧院进行今年首演。图为ASB剧院。（张君／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2017年04月08日讯】（大纪元新西兰记者站报导）天国圣境，雪域高原，流光溢彩，蔚为大观。4月7日晚，<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团当天的演出给新西兰的观众带来一个身心愉悦又引人深思的夜晚。今年是神韵艺术团第十次莅临新西兰，神韵晚会新西兰主办方表示：“华人观众比往年多好几倍。”</p>
-<h2>华人青年女子：<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>让人在<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E5%96%84%E4%B8%8E%E6%81%B6.md#1">善与恶</a>之间作选择</h2>
+	<p>【大纪元2017年04月08日讯】（大纪元新西兰记者站报导）天国圣境，雪域高原，流光溢彩，蔚为大观。4月7日晚，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团当天的演出给新西兰的观众带来一个身心愉悦又引人深思的夜晚。今年是神韵艺术团第十次莅临新西兰，神韵晚会新西兰主办方表示：“华人观众比往年多好几倍。”</p>
+<h2>华人青年女子：<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>让人在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%96%84%E4%B8%8E%E6%81%B6.md#1">善与恶</a>之间作选择</h2>
 <p>来自中国北方沿海城市的青年女子阿梅（化名）看完演出后久久不愿离去。她觉得：“这位艺术总监太不可思议了，简直就是神！”</p>
 <p>阿梅到新西兰刚刚两年。她说，自己从小喜爱中国古代文化，很多古典诗词看三遍就能背下来，她自己也不知道为什么。阿梅曾学过中国古典舞，但后来弃舞从武，并进入武术队。</p>
-<p>她说，自己被整台演出深深地震撼，尤其背后的编导太厉害了，将她引入了对人性的思考。“我们发现，流芳百世的作品，往往都是体现在人性层面的价值观，那样的艺术才有沉淀的价值，才有存在的意义。”阿梅说，“神韵体现出人性在<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E5%96%84%E4%B8%8E%E6%81%B6.md#1">善与恶</a>之间，应该作出怎样的一个选择。”</p>
+<p>她说，自己被整台演出深深地震撼，尤其背后的编导太厉害了，将她引入了对人性的思考。“我们发现，流芳百世的作品，往往都是体现在人性层面的价值观，那样的艺术才有沉淀的价值，才有存在的意义。”阿梅说，“神韵体现出人性在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%96%84%E4%B8%8E%E6%81%B6.md#1">善与恶</a>之间，应该作出怎样的一个选择。”</p>
 <p>阿梅说，现在许多演出都是通过音响、视觉、高科技去刺激观众的感官，创造情感的发泄；那样的作品，往往都是过眼烟云。“可神韵却完全不同。”她说，神韵是通过艺术的美让人的心灵变美，那才是真正的艺术。阿梅感动地说：“这样的演出，我还真的从来没有看过。”</p>
-<p>阿梅认为，节目中的<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>故事展现的不是政治，而是人生的价值。她说：“‘真善忍’三个字恰恰体现出人类心灵中最纯善、最纯美的地方，也是人性美的闪光点，通过这个闪光点去对比，什么是善的，什么是恶的。”</p>
+<p>阿梅认为，节目中的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>故事展现的不是政治，而是人生的价值。她说：“‘真善忍’三个字恰恰体现出人类心灵中最纯善、最纯美的地方，也是人性美的闪光点，通过这个闪光点去对比，什么是善的，什么是恶的。”</p>
 <p>她特别喜欢那个有关穿越时空的故事（《古吏壮志》），“在一个漂亮的3D动画衬托下，她居然将艺术、人文、自然科学，甚至相对论这样的概念全部融合在一起展现出来，这简直太棒了，这不是用人类的语言可以形容了。”</p>
 <p>“不愧为世界第一秀了。”她说真正的艺术是超越世俗的，“我觉得一般人不可能将这些元素如此完美地结合在一起。”</p>
 <p>对于目前神韵无法去中国演出，“那是民族的遗憾！”她说，“当代中国社会太可怕了，人们在信仰上空白，什么都不相信时，就会去崇拜人性最恶的东西。而一个政府正在把人性最丑恶的部分发扬光大，我还能说什么。”</p>
-<p>阿梅最后说，她非常希望中国人不要听信国内的宣传，都该来看看神韵演出。“那么伟大的一个演出，登上了国际舞台，传播着中国五千年的传统文化。作为正常的中国人，我们是不是更应该去看她，去了解一下究竟什么是<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>？”</p>
+<p>阿梅最后说，她非常希望中国人不要听信国内的宣传，都该来看看神韵演出。“那么伟大的一个演出，登上了国际舞台，传播着中国五千年的传统文化。作为正常的中国人，我们是不是更应该去看她，去了解一下究竟什么是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>？”</p>
 <h2>中国留学生：坚持正确信念必有好报</h2>
-<p>留学生小刘（化名）也观赏了神韵纽约艺术团当晚在<ahref="https://github.com/hp202/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0asb%E5%89%A7%E9%99%A2.md#1">奥克兰ASB剧院</a>的演出。他由衷地赞叹：“神韵演出精彩，是因为有她的灵感。”</p>
+<p>留学生小刘（化名）也观赏了神韵纽约艺术团当晚在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0asb%E5%89%A7%E9%99%A2.md#1">奥克兰ASB剧院</a>的演出。他由衷地赞叹：“神韵演出精彩，是因为有她的灵感。”</p>
 <p>小刘于2014年来新西兰学习商科，今年是他第二次看神韵，看完演出后，他非常激动，迫切地找人诉说他的感受。</p>
 <p>他说：“我去年第一次来看演出后就感触很多，但我把想法说给朋友们，他们都不理解。他们认为，那是高科技舞台特效做的。一般的人也都认为，这是高科技特效做的，可是我不这么认为。其实我感觉到神韵演出的精彩，那是一种灵感哪！这种灵感，你科技再高也不一定制造得出来。我觉得还是要懂得欣赏的，有这个缘分的人才能欣赏得出来这种灵感的感觉。”小刘说。</p>
 <p>小刘表示，“所以我今年就是想再来看一次，因为一般的演出就算演得很好，就算舞台效果很高，但是它没有那种灵感的感觉，其实是它背后的东西。”</p>
@@ -33,38 +33,37 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/16/2/18/n4643095.md#1">神韵世界艺术团飞抵墨尔本 艺术之都粉丝热盼</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/16/3/27/n7463101.md#1">前芭蕾舞演员：神韵引领我们追求神性</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/16/12/15/n8596312.md#1">五个团全球巡回演出 神韵新演季即将开始</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/17/1/9/n8683714.md#1">“老少咸宜” 副检察长携全家赏神韵</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/17/1/9/n8684246.md#1">艺术家：神韵舞蹈美如画卷</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/17/3/23/n8956302.md#1">神韵飞抵墨尔本 大洋洲32场巡演拉开帷幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/2/18/n4643095.md#1">神韵世界艺术团飞抵墨尔本 艺术之都粉丝热盼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/27/n7463101.md#1">前芭蕾舞演员：神韵引领我们追求神性</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/15/n8596312.md#1">五个团全球巡回演出 神韵新演季即将开始</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/1/9/n8683714.md#1">“老少咸宜” 副检察长携全家赏神韵</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/1/9/n8684246.md#1">艺术家：神韵舞蹈美如画卷</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/23/n8956302.md#1">神韵飞抵墨尔本 大洋洲32场巡演拉开帷幕</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/10/n10902151.md#1" target="_blank">龙延：中共道路是魔鬼的选择</a></li><li><a href="https://github.com/hp202/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232059.md#1" target="_blank">大陆移民旧金山推崇法轮功：真善忍好</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/17/n10916061.md#1" target="_blank">同化真善忍 一位澳洲人寻获的幸福人生</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12009361.md#1">纳瓦罗：有一个数字会让所有美国人都震惊</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12009729.md#1">“谁敢戴在脸上？” 代理商揭大陆口罩黑幕</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12011929.md#1">【一线采访】趁解封赶紧走 武汉数万人出城</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/6/n12009114.md#1">【最新疫情4.7】美考虑暂停对世卫的捐款</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/6/n12006890.md#1">与陈奕迅合唱曲遭网友批大外宣 蔡依林回应</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/6/n12009067.md#1">港歌手关淑怡退出演艺圈：见识最丑陋一面</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/5/n12005827.md#1">美国天后赞台湾防疫 网红讽中共：有钱买不到</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12009463.md#1">苏志燮亲自宣布结婚 还捐款帮助弱势儿童</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/13/2/3/n3792283.md#1">米开朗基罗（3）化腐朽为神奇——《大卫像》</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/hp202/djy/blob/master/gb/20/3/27/n11979695.md#1">古今记载里的“另外时空”（二）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hp202/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hp202/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/7/n9012645.htm">神韵奥克兰首场满场 华人赞展现人性的闪光点</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/7/n9012645.htm">神韵奥克兰首场满场 华人赞展现人性的闪光点</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hp202/djy/blob/master/gb/17/4/7/n9012645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hp202/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hp202/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hp202/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hp202/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hp202/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/4/7/n9012645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
